Fix border artifacts in edge-detection filters

KisConvolutionPainter::applyMatrix() will automatically read more
data outside the passed `areaSize` if it is needed for the kernel.
There is no need to pass bigger area to the painter.

BUG:419534